--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ NeedsCompilation: yes
 LazyData: true
 Imports:
     Rcpp (>= 0.12.4)
+Suggests:
+    testthat
 LinkingTo: Rcpp
 URL: https://github.com/mpadge/hotspotr
 Date: 2016-08-24
