--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: truncnorm
+Package: tnorm
 Version: 0.0.0
 Authors@R: person("Mark", "Padgham", email = "mark.padgham@email.com", role = c("aut", "cre"))
 Title: Truncated Normal Distribution
@@ -11,7 +11,8 @@ SystemRequirements: C++11
 NeedsCompilation: yes
 LazyData: true
 Imports:
-    Rcpp (>= 0.12.4)
+    Rcpp (>= 0.12.4),
+    truncnorm
 Suggests:
     testthat
 LinkingTo: Rcpp
